--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <body class="bg-[#f8fafc] text-slate-900 overflow-x-hidden selection:bg-indigo-100">
     <div id="root"></div>
 
-    <script type="module" src="/src/main.tsx"></script>
+    <script type="module" src="/main.tsx"></script>
 
     <script>
         mermaid.initialize({ 
