--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body class="bg-[#f8fafc] text-slate-900 overflow-x-hidden selection:bg-indigo-100">
     <div id="root"></div>
 
-    <script type="module" src="/src/App.tsx"></script>.
+    <script type="module" src="/App.tsx"></script>.
     <script type="module" src="/main.tsx"></script>
 
     <script>
